# riscv-assembly-tests

./: CMakeLists.txt  README.md
atomic/: CMakeLists.txt
atomic/amoadd/: CMakeLists.txt  amoadd.s
atomic/fence/: CMakeLists.txt  fence.s
base/: CMakeLists.txt
base/add/: add.s
base/add_bne/: add_bne.s
base/add_bne_perf/: CMakeLists.txt  add_bne_perf.s
base/cross_page_access/: CMakeLists.txt  cross_page_access.s
base/jump_to_offset/: CMakeLists.txt  jump_to_offset.s
base/jump_to_self/: CMakeLists.txt  jump_to_self.s
base/lui/: lui.s
base/misalign/: misalign.s
base/nop/: nop.s
base/sub_bgeu/: sub_bgeu.s
base/sw_lw_blt/: sw_lw_blt.s
common/: TEST_TEMPLATE.s  host.s  macros.s  main.ld
compressed/: CMakeLists.txt  testlist.cmake
compressed/cmv/: CMakeLists.txt  cmv.s
compressed/mv_lds/: CMakeLists.txt  mv_lds.s
csr/: CMakeLists.txt  testlist.cmake
csr/csrrw/: CMakeLists.txt  csrrw.s
dhry/: dry2
float/: CMakeLists.txt  testlist.cmake
float/fadd/: CMakeLists.txt  fadd.s
